fix(header): Fix main too large for header (#13)
The header is 37px, but main only made available 35px.

--- a/public/style.css
+++ b/public/style.css
@@ -56,7 +56,7 @@ body {
 #main {
   display: flex;
   flex-direction: row;
-  height: calc(100vh - 35px);
+  height: calc(100vh - 37px);
 }
 
 .pane {
